--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,7 +1,7 @@
 <h1>My Bookshelf....</h1>
 
 <h2><% @books.each do |book| %></h2>
-<h2><%= book.title %></h2>
+<h2><%= link_to book.title, book_path(book)  %></h2>
 <h2><%= book.author %></h2>
 <h2><%= "*" * book.rating %></h2>
 <h3><%= book.have_read ? "You have read this book" : "You have not read this book" %></h3>
