new and create working with link from index

--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -6,3 +6,5 @@
 <h2><%= "*" * book.rating %></h2>
 <h3><%= book.have_read ? "You have read this book" : "You have not read this book" %></h3>
 <% end %>
+
+<h2><%= link_to "Add a new book", new_book_path %></h2>
