--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,4 +1,5 @@
 <h1><%= @book.title %></h1>
 <h1><%= "by #{@book.author}"  %></h1>
 <h1><%= "*" * @book.rating %></h1>
+<h2><%= link_to "Edit this book", edit_book_path %></h2>
 <h2><%= link_to "Back to my bookshelf", books_path %></h2>
