--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -13,9 +13,11 @@
 <%= f.text_field :title %>
 <%= f.label :author, "Enter author" %>
 <%= f.text_field :author %>
+<%= f.label :genre, "Select genre" %>
+<%= f.select :genre, ['Sci-fi', 'Fantasy', 'other'] %>
 <%= f.label :rating, "Enter rating" %>
 <%= f.text_field :rating %>
 <%= f.label "I have read this book" %>
-<%= f.check_box :have_read %> <br />
+<%= f.check_box :have_read %>
 <%= f.submit %>
 <% end %>
