--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,5 +1,6 @@
 <h1><%= @book.title %></h1>
 <h1><%= "by #{@book.author}"  %></h1>
+<h2><%= @book.genre %></h2>
 <h1><%= "*" * @book.rating %></h1>
 <h3><%= @book.have_read ? "You have read this book" : "You have not read this book" %></h3>
 
