--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -7,5 +7,6 @@
 <% @book.comments.each do |comment| %></h3>
 <h3><%= comment.content %></h3>
 <% end %>
+<h2><%= link_to "Review this book", new_book_comment_path(@book) %></h2>
 <h2><%= link_to "Edit this book", edit_book_path %></h2>
 <h2><%= link_to "Back to my bookshelf", books_path %></h2>
