--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,4 +1,4 @@
-<h1>My Bookshelf....</h1>
+<h1>All Books....</h1>
 
 <h2><% @books.each do |book| %></h2>
 <h2><%= link_to book.title, book_path(book)  %></h2>
@@ -8,3 +8,4 @@
 <% end %>
 
 <h2><%= link_to "Add a new book", new_book_path %></h2>
+<h2> <%= link_to "My Bookshelf", my_books_books_path %> </h2>
