book create no creates a new user_books and sets the have_or_want to the value of have read. _form changed to give option add to bookshelf or add to reading list

--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -17,7 +17,16 @@
 <%= f.select :genre, ['Sci-fi', 'Fantasy', 'other'] %>
 <%= f.label :rating, "Enter rating" %>
 <%= f.text_field :rating %>
-<%= f.label "I have read this book" %>
-<%= f.check_box :have_read %>
+  <table>
+        <tr>
+            <td><%= f.label 'have_read', 'Add to My Bookshelf' %></td>
+            <td><%= f.radio_button :have_read, true %></td>
+        </tr>
+
+        <tr>
+            <td><%= f.label 'have_read', 'Add to My Reading list' %></td>
+            <td><%= f.radio_button :have_read, false %></td>
+        </tr>
+    </table>
 <%= f.submit %>
 <% end %>
