Reading list working but my bookshelf not altered yet as methods need moving to a user_book controller, to be done on a seperate branch

--- a/app/views/books/my_reading_list.html.erb
+++ b/app/views/books/my_reading_list.html.erb
@@ -1,4 +1,4 @@
-<h1>My Bookshelf</h1>
+<h1>My Reading List</h1>
 
 <% @my_reading_list.each do |user_book| %>
 <h2><%= link_to user_book.book.title, book_path(user_book.book)%></h2>
