--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -4,19 +4,21 @@
 <h1><%= "*" * @book.rating %></h1>
 
 <!-- if statement so if the book can only be added if it's not in the bookshelf -->
-<h2><% if current_user.books.exclude? @book  %></h2>
+
 
 <!-- If the book is not on the bookshelf or on the reading list you can add it to either -->
-<h2><%= link_to "add_to_my_bookshelf",add_to_my_bookshelf_book_path(@book) %></h2>
-<h2><%= link_to "add_to_my_reading_list",add_to_my_reading_list_book_path(@book) %></h2>
-<!-- If is is on the reading list you can add to bookshelf(changes have_or_want to true) or can remove from reading list (delete user_book instance) -->
-<% elsif  @book.have_read = false %>
 
-<%= link_to "add_to_my_bookshelf", add_to_my_bookshelf_book_path(@book)%></h2>
 
-<% else %>
-  <%= link_to "Remove from Bookshelf", remove_from_my_bookshelf_book_path(@book) %>
+<%= simple_form_for [@book, @user_book] do |f| %>
+<!-- if statment with simple forms to edit -change from reading list to bookshelf. and another to destroy. When added to bookcae need to do a rateing and when destroyed need to remove that rating -->
+<%= f.input :have_or_want,
+:collection => [[true, 'Add to Bookshelf'], [false, 'Add to resding list']],
+:label_method => :last,
+:value_method => :first,
+:as => :radio_buttons %>
+<%= f.submit "Submit" %>
 <% end %>
+<!-- If is is on the reading list you can add to bookshelf(changes have_or_want to true) or can remove from reading list (delete user_book instance) -->
 
 <h2><% @book.users do |user| %></h2>
 <h2><%= user.email %></h2>
