--- a/app/views/books/my_books.html.erb
+++ b/app/views/books/my_books.html.erb
@@ -1,9 +1,9 @@
 <h1>My Bookshelf</h1>
 
-<% @my_books.each do |book| %>
-<h2><%= link_to book.book.title, book_path(book)%></h2>
-<h2><%= book.book.author %></h2>
-<h2><%= "*" * book.book.rating %></h2>
+<% @my_books.each do |user_book| %>
+<h2><%= link_to user_book.book.title, book_path(user_book.book)%></h2>
+<h2><%= user_book.book.author %></h2>
+<h2><%= "*" * user_book.book.rating %></h2>
 <% end %>
 
 <h2><%= link_to "Back to Library", books_path %></h2>
