--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -3,20 +3,25 @@
 <h2><%= @book.genre %></h2>
 <h1><%= "*" * @book.rating %></h1>
 
-<!-- if statement so if the book can only be added if it's not in the bookshelf -->
-
-
-<!-- If the book is not on the bookshelf or on the reading list you can add it to either -->
-
-
-<%= simple_form_for [@book, @user_book] do |f| %>
 <!-- if statment with simple forms to edit -change from reading list to bookshelf. and another to destroy. When added to bookcae need to do a rateing and when destroyed need to remove that rating -->
+
+<% if @book.user_books.have_or_want == false%>
+
+
+<h1>Test fail</h1>
+
+<% else %>
+<!-- this form is for when there is no user_book and adds to either reading list or bookshelf -->
+<%= simple_form_for [@book, @user_book] do |f| %>
 <%= f.input :have_or_want,
 :collection => [[true, 'Add to Bookshelf'], [false, 'Add to resding list']],
 :label_method => :last,
 :value_method => :first,
 :as => :radio_buttons %>
 <%= f.submit "Submit" %>
+<% end %>
+
+
 <% end %>
 <!-- If is is on the reading list you can add to bookshelf(changes have_or_want to true) or can remove from reading list (delete user_book instance) -->
 
