--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -5,12 +5,10 @@
 
 <!-- if statment with simple forms to edit -change from reading list to bookshelf. and another to destroy. When added to bookcae need to do a rateing and when destroyed need to remove that rating -->
 
-<% if @book.user_books.have_or_want == false%>
+<% if current_user.books.exclude? @book  %>
 
 
-<h1>Test fail</h1>
 
-<% else %>
 <!-- this form is for when there is no user_book and adds to either reading list or bookshelf -->
 <%= simple_form_for [@book, @user_book] do |f| %>
 <%= f.input :have_or_want,
@@ -21,7 +19,13 @@
 <%= f.submit "Submit" %>
 <% end %>
 
+<% elsif @book.user_books[0].have_or_want == false %>
 
+
+<h1>On reading list, need to add to book shelf or remove from list</h1>
+
+<% else %>
+<h1>On bookshelf need option to remove from bookshelf</h1>
 <% end %>
 <!-- If is is on the reading list you can add to bookshelf(changes have_or_want to true) or can remove from reading list (delete user_book instance) -->
 
