--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -21,13 +21,20 @@
 
 <% elsif @book.user_books[0].have_or_want == false %>
 
+<!-- If is is on the reading list you can add to bookshelf(changes have_or_want to true) or can remove from reading list (delete user_book instance) -->
+
+<%= simple_form_for [@book, @user_book] do |f| %>
+<%= f.input :have_or_want %>
+<%= f.submit "Submit" %>
+<% end %>
 
 <h1>On reading list, need to add to book shelf or remove from list</h1>
 
 <% else %>
+
+<!-- It is on the bookshelf so option to remove - user_books#destroy?  -->
 <h1>On bookshelf need option to remove from bookshelf</h1>
 <% end %>
-<!-- If is is on the reading list you can add to bookshelf(changes have_or_want to true) or can remove from reading list (delete user_book instance) -->
 
 <h2><% @book.users do |user| %></h2>
 <h2><%= user.email %></h2>
