--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -10,27 +10,26 @@
 
 
 <!-- this form is for when there is no user_book and adds to either reading list or bookshelf -->
-<%= simple_form_for [@book, @user_book], url: book_user_books_path(@book, @user_book), method: :pu  do |f| %>
+<%= simple_form_for [@book, @user_book], url: book_user_books_path(@book, @user_book), method: :post  do |f| %>
 <%= f.input :have_or_want, :as => :hidden, :label => 'Remove this book from bookshelf', :input_html => { :value => true } %>
 <%= f.submit "Move to Bookcase" %>
 <% end %>
 
-<%= simple_form_for [@book, @user_book], url: book_user_books_path(@book, @user_book), method: :pu  do |f| %>
+<%= simple_form_for [@book, @user_book], url: book_user_books_path(@book, @user_book), method: :post  do |f| %>
 <%= f.input :have_or_want, :as => :hidden, :label => 'Remove this book from bookshelf', :input_html => { :value => false } %>
 <%= f.submit "Add to Reading list" %>
 <% end %>
-
 
 <% elsif @book.user_books[0].have_or_want == false %>
 
 <!-- If is is on the reading list you can add to bookshelf(changes have_or_want to true) or can remove from reading list (delete user_book instance) -->
 
-<%= simple_form_for [@book, @user_book], url: book_user_books_path(@book, @user_book), method: :pu  do |f| %>
+<%= simple_form_for [@book, @user_book], url: book_user_books_path(@book, @user_book), method: :post  do |f| %>
 <%= f.input :have_or_want, :as => :hidden, :label => 'Remove this book from bookshelf', :input_html => { :value => true } %>
 <%= f.submit "Move to Bookcase" %>
 <% end %>
 
-<%= simple_form_for [@book, @user_book], url: book_user_books_path(@book, @user_book), method: :pu  do |f| %>
+<%= simple_form_for [@book, @user_book], url: book_user_books_path(@book, @user_book), method: :post  do |f| %>
 <%= f.input :have_or_want, :as => :hidden, :label => 'Remove this book from bookshelf', :input_html => { :value => false } %>
 <%= f.submit "Remove from Reading list" %>
 <% end %>
@@ -39,7 +38,7 @@
 <% else %>
 <!-- It is on the bookshelf so option to remove - user_books#destroy?  -->
 
-<%= simple_form_for [@book, @user_book], url: book_user_books_path(@book, @user_book), method: :pu  do |f| %>
+<%= simple_form_for [@book, @user_book], url: book_user_books_path(@book, @user_book), method: :post  do |f| %>
 <%= f.input :have_or_want, :as => :hidden, :label => 'Remove this book from bookshelf', :input_html => { :checked => true } %>
 <%= f.submit "Remove Book" %>
 <% end %>
